# inline_variant_visitor

./: CMakeLists.txt  README.md  example.cpp  fail_different_return.cpp  fail_different_return2.cpp  fail_nofunctions.cpp  fail_nontotal.cpp  fail_nonunary.cpp  fail_overlapping.cpp  fail_overlapping2.cpp  fail_spurious.cpp  function_signature.hpp  inline_variant.cpp  inline_variant.hpp  inline_variant_test.cpp
